--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,13 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
